# stereo_camera_pipeline

./: README.md  package.xml  setup.cfg  setup.py
config/: stereo_calibration.yaml
launch/: stereo_pipeline.launch.py
stereo_camera_pipeline/: publish_stereo.py  rectify_and_publish.py  stereo_processor_node.py
