<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stereo_camera_pipeline</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="test@test.com">shye</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>python3-opencv</depend> <!-- For cv2 -->
  <depend>python3-numpy</depend> <!-- For numpy -->
  <depend>python3-yaml</depend>   <!-- For pyyaml -->
  <depend>python3-requests</depend> <!-- For the CameraStreamThread's HTTP requests -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
